2006-01-05  Christopher Faylor  <cgf@timesys.com>

	* cygtls.cc (_cygtls::remove): Don't output debugging info if this
	isn't a cygwin thread.

2006-01-05  Igor Peshansky  <pechtcha@cs.nyu.edu>

	* spawn.cc (spawn_guts): Invert the argument to
	set_console_state_for_spawn.

2006-01-04  Christopher Faylor  <cgf@timesys.com>

	* fhandler_console.cc (fhandler_console::need_invisible): Only try to
	open "CygwinInvisible" windows station if opening of default station
	fails.  Use CloseWindowStation to close window station handle.

2006-01-04  Christopher Faylor  <cgf@timesys.com>

	* fhandler_console.cc (fhandler_console::need_invisible): Open up the
	security of the newly created windows station.

2006-01-04  Eric Blake  <ebb9@byu.net>

	* path.cc (dot_special_chars): Add ", <, >, and |.

2006-01-03  Christopher Faylor  <cgf@timesys.com>

	* fhandler_console.cc (beep): Use MB_OK which is documented as using
	the default bell rather than -1 which seems to behave differently on
	different versions of Windows.

2006-01-03  Christopher Faylor  <cgf@timesys.com>

	* fhandler_process.cc (fhandler_process::readdir): Add missing argument
	to syscall_printf.

	* fhandler_console.cc (fhandler_console::need_invisible): Use made-up
	name for windows station rather than asking Windows to create one for
	us.

	* spawn.cc (spawn_guts): Don't mess with console if we're detaching.

2006-01-03  Christopher Faylor  <cgf@timesys.com>

	* dir.cc (readdir_worker): Minor code cleanup.

	* fhandler_console.cc (beep): Use a more Windows-generic wav file if
	the beep is missing.  Use a more foolproof way to find out whether we
	should be recreating the missing key.

	* registry.h (reg_key::_disposition): New field.
	(reg_key::created): New function.
	* registry.cc (reg_key::reg_key): Set _disposition to zero by default.
	(reg_key::build_key): Fill in _disposition field.

2006-01-03  Eric Blake  <ebb9@byu.net>

	* dir.cc (readdir_worker): Ensure that saw_dot* flags are updated when